--- a/gaprepgen.html
+++ b/gaprepgen.html
@@ -299,27 +299,8 @@
                 }
             };
 
-            const date = new Date();
-            const currentDate = date.toLocaleString('default', {
-                month: 'short',
-                day: 'numeric',
-                year: 'numeric',
-            });
-
-            // FOR TESTING *********************
-            // const genoIds = document
-            //     .getElementById('genoIds')
-            //     .value.match(/(?:\d+\.)?\d+/g)
-            //     .filter(Number);
-
-            // const campaignName =
-            //         'BR | 20230108 6AM FF Winter Sale - Up to 60% Off Sale + 30% SL LEV',
-            //     portalLink =
-            //         'https://portal.persado.com/accounts/209/experiments/2595181';
-            // const genoIds = ['2765119', '2765121', '2765123'];
-            // FOR TESTING *********************
-
             let rawData = [],
+                results = [],
                 finalResults = [];
 
             const inputs = document.getElementsByClassName('inputText');
@@ -334,6 +315,13 @@
             inputs[4].value =
                 'https://portal.persado.com/accounts/209/experiments/2595189';
             inputs[5].value = '2765107 2765109 2765111';
+
+            const date = new Date();
+            const currentDate = date.toLocaleString('default', {
+                month: 'short',
+                day: 'numeric',
+                year: 'numeric',
+            });
 
             function createReport(file) {
                 const inputObj = [];
@@ -370,13 +358,6 @@
                                     wb.Sheets['Sheet1']
                                 );
 
-                            const date = new Date();
-                            const currentDate = date.toLocaleString('default', {
-                                month: 'short',
-                                day: 'numeric',
-                                year: 'numeric',
-                            });
-
                             rawData = xlRowObj;
                             const data = rawData;
 
@@ -397,8 +378,10 @@
                                         ]);
                             }
 
-                            const results = Array.from(Array(3).fill(0), () =>
-                                new Array(5).fill(0)
+                            results.push(
+                                Array.from(Array(3).fill(0), () =>
+                                    new Array(5).fill(0)
+                                )
                             );
 
                             const metrics = [
@@ -426,54 +409,58 @@
                                                     'Email version (v11) (evar11)'
                                                 ].includes('PERSXC1X')
                                             ) {
-                                                results[i][k] +=
+                                                results[z][i][k] +=
                                                     data[j][metrics[k]];
                                             } else if (
                                                 data[j][
                                                     'Email version (v11) (evar11)'
                                                 ].includes('PERSXT1X')
                                             ) {
-                                                results[i][k] +=
+                                                results[z][i][k] +=
                                                     data[j][metrics[k]];
                                             } else if (
                                                 data[j][
                                                     'Email version (v11) (evar11)'
                                                 ].includes('PERSXT2X')
                                             ) {
-                                                results[i][k] +=
+                                                results[z][i][k] +=
                                                     data[j][metrics[k]];
                                             }
                                         }
-                                        results[i][k] = parseFloat(
-                                            results[i][k].toFixed(2)
+                                        results[z][i][k] = parseFloat(
+                                            results[z][i][k].toFixed(2)
                                         );
                                     }
                                 }
+
                                 finalResults.push({
                                     'Experiment Name & Link':
                                         inputObj[z]['Campaign Name'],
                                     Variant: variants[i],
-                                    Delivered: results[i][0],
-                                    Opened: results[i][1],
-                                    Clicked: results[i][2],
-                                    Orders: results[i][3],
-                                    'Net Demand': results[i][4],
+                                    Delivered: results[z][i][0],
+                                    Opened: results[z][i][1],
+                                    Clicked: results[z][i][2],
+                                    Orders: results[z][i][3],
+                                    'Net Demand': results[z][i][4],
                                     '': '',
                                     'Open Rate':
                                         (
-                                            (results[i][1] / results[i][0]) *
+                                            (results[z][i][1] /
+                                                results[z][i][0]) *
                                             100
                                         ).toFixed(2) + '%',
                                     'Average Lift Opens': 0,
                                     'Click Rate':
                                         (
-                                            (results[i][2] / results[i][0]) *
+                                            (results[z][i][2] /
+                                                results[z][i][0]) *
                                             100
                                         ).toFixed(2) + '%',
                                     'Average Lift Clicks': 0,
                                     'Conversion Rate':
                                         (
-                                            (results[i][3] / results[i][0]) *
+                                            (results[z][i][3] /
+                                                results[z][i][0]) *
                                             100
                                         ).toFixed(2) + '%',
                                     'Average Lift Conversions': 0,
@@ -482,38 +469,57 @@
                                 });
                             }
 
-                            for (let i = 0; i < variants.length; i++) {
+                            newResults = results.reduce((res, current) => {
+                                return res.concat(Array(3).fill(current));
+                            }, []);
+
+                            console.log(results, newResults);
+
+                            for (let i = 0; i < finalResults.length; i++) {
                                 finalResults[i]['Average Lift Opens'] =
                                     (
-                                        ((results[1][1] + results[2][1]) /
-                                            (results[1][0] + results[2][0]) /
-                                            (results[0][1] / results[0][0]) -
+                                        ((newResults[i][1][1] +
+                                            newResults[i][2][1]) /
+                                            (newResults[i][1][0] +
+                                                newResults[i][2][0]) /
+                                            (newResults[i][0][1] /
+                                                newResults[i][0][0]) -
                                             1) *
                                         100
                                     ).toFixed(2) + '%';
                                 finalResults[i]['Average Lift Clicks'] =
                                     (
-                                        ((results[1][2] + results[2][2]) /
-                                            (results[1][0] + results[2][0]) /
-                                            (results[0][2] / results[0][0]) -
+                                        ((newResults[i][1][2] +
+                                            newResults[i][2][2]) /
+                                            (newResults[i][1][0] +
+                                                newResults[i][2][0]) /
+                                            (newResults[i][0][2] /
+                                                newResults[i][0][0]) -
                                             1) *
                                         100
                                     ).toFixed(2) + '%';
                                 finalResults[i]['Average Lift Conversions'] =
                                     (
-                                        ((results[1][3] + results[2][3]) /
-                                            (results[1][0] + results[2][0]) /
-                                            (results[0][3] / results[0][0]) -
+                                        ((newResults[i][1][3] +
+                                            newResults[i][2][3]) /
+                                            (newResults[i][1][0] +
+                                                newResults[i][2][0]) /
+                                            (newResults[i][0][3] /
+                                                newResults[i][0][0]) -
                                             1) *
                                         100
                                     ).toFixed(2) + '%';
                                 finalResults[i]['Incremental Revenue'] =
                                     '$' +
                                     (
-                                        ((results[1][4] + results[2][4]) /
-                                            (results[1][0] + results[2][0]) -
-                                            results[0][4] / results[0][0]) *
-                                        (results[1][0] + results[2][0])
+                                        ((newResults[i][1][4] +
+                                            newResults[i][2][4]) /
+                                            (newResults[i][1][0] +
+                                                newResults[i][2][0]) -
+                                            newResults[i][0][4] /
+                                                newResults[i][0][0]) *
+                                        (newResults[i][1][0] +
+                                            newResults[i][2][0])
                                     ).toFixed(2);
                             }
                         };
@@ -522,7 +528,7 @@
                         reader.readAsBinaryString(file[x]);
                     }
                 }
-                console.log(finalResults);
+                //console.log(finalResults);
             }
 
             function downloadXL(fileName) {
@@ -540,32 +546,48 @@
                     { s: { r: 10, c: 0 }, e: { r: 12, c: 0 } },
                     { s: { r: 13, c: 0 }, e: { r: 15, c: 0 } },
                     { s: { r: 16, c: 0 }, e: { r: 18, c: 0 } },
+                    { s: { r: 19, c: 0 }, e: { r: 21, c: 0 } },
+                    { s: { r: 22, c: 0 }, e: { r: 24, c: 0 } },
+                    { s: { r: 25, c: 0 }, e: { r: 27, c: 0 } },
                     { s: { r: 1, c: 9 }, e: { r: 3, c: 9 } },
                     { s: { r: 4, c: 9 }, e: { r: 6, c: 9 } },
                     { s: { r: 7, c: 9 }, e: { r: 9, c: 9 } },
                     { s: { r: 10, c: 9 }, e: { r: 12, c: 9 } },
                     { s: { r: 13, c: 9 }, e: { r: 15, c: 9 } },
                     { s: { r: 16, c: 9 }, e: { r: 18, c: 9 } },
+                    { s: { r: 19, c: 9 }, e: { r: 21, c: 9 } },
+                    { s: { r: 22, c: 9 }, e: { r: 24, c: 9 } },
+                    { s: { r: 25, c: 9 }, e: { r: 27, c: 9 } },
                     { s: { r: 1, c: 11 }, e: { r: 3, c: 11 } },
                     { s: { r: 4, c: 11 }, e: { r: 6, c: 11 } },
                     { s: { r: 7, c: 11 }, e: { r: 9, c: 11 } },
                     { s: { r: 10, c: 11 }, e: { r: 12, c: 11 } },
                     { s: { r: 13, c: 11 }, e: { r: 15, c: 11 } },
                     { s: { r: 16, c: 11 }, e: { r: 18, c: 11 } },
+                    { s: { r: 19, c: 11 }, e: { r: 21, c: 11 } },
+                    { s: { r: 22, c: 11 }, e: { r: 24, c: 11 } },
+                    { s: { r: 25, c: 11 }, e: { r: 27, c: 11 } },
                     { s: { r: 1, c: 13 }, e: { r: 3, c: 13 } },
                     { s: { r: 4, c: 13 }, e: { r: 6, c: 13 } },
                     { s: { r: 7, c: 13 }, e: { r: 9, c: 13 } },
                     { s: { r: 10, c: 13 }, e: { r: 12, c: 13 } },
                     { s: { r: 13, c: 13 }, e: { r: 15, c: 13 } },
                     { s: { r: 16, c: 13 }, e: { r: 18, c: 13 } },
+                    { s: { r: 19, c: 13 }, e: { r: 21, c: 13 } },
+                    { s: { r: 22, c: 13 }, e: { r: 24, c: 13 } },
+                    { s: { r: 25, c: 13 }, e: { r: 27, c: 13 } },
                     { s: { r: 1, c: 14 }, e: { r: 3, c: 14 } },
                     { s: { r: 4, c: 14 }, e: { r: 6, c: 14 } },
                     { s: { r: 7, c: 14 }, e: { r: 9, c: 14 } },
                     { s: { r: 10, c: 14 }, e: { r: 12, c: 14 } },
                     { s: { r: 13, c: 14 }, e: { r: 15, c: 14 } },
                     { s: { r: 16, c: 14 }, e: { r: 18, c: 14 } },
+                    { s: { r: 19, c: 14 }, e: { r: 21, c: 14 } },
+                    { s: { r: 22, c: 14 }, e: { r: 24, c: 14 } },
+                    { s: { r: 25, c: 14 }, e: { r: 27, c: 14 } },
                 ];
                 ws1['!merges'] = merge;
+
                 // ws1['A2'].l = {
                 //     Target: portalLink,
                 // };
