--- a/gaprepgen.html
+++ b/gaprepgen.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <!-- prettier-ignore -->
-        <div id="container" class="animate-bottom"> <h1>Gap Report Generator</h1> <h2> <span style="color: red">[ </span>George Antoniou - EMEA SDE team<span style="color: red">]</span> </h2> <div class="inputs"> <div class="input-set" id="input-set1"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name1" name="campaign-name1" placeholder="Campaign Name #1"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link1" name="portal-link1" placeholder="Portal Link #1"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids1" name="geno-ids1" placeholder="Geno IDs #1"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set2"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name2" name="campaign-name2" placeholder="Campaign Name #2"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link2" name="portal-link2" placeholder="Portal Link #2"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids2" name="geno-ids2" placeholder="Geno IDs #2"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set3"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name3" name="campaign-name3" placeholder="Campaign Name #3"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link3" name="portal-link3" placeholder="Portal Link #3"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids3" name="geno-ids3" placeholder="Geno IDs #3"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set4"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name4" name="campaign-name4" placeholder="Campaign Name #4"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link4" name="portal-link4" placeholder="Portal Link #4"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids4" name="geno-ids4" placeholder="Geno IDs #4"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set5"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name5" name="campaign-name5" placeholder="Campaign Name #5"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link5" name="portal-link5" placeholder="Portal Link #5"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids5" name="geno-ids5" placeholder="Geno IDs #5"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set6"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name6" name="campaign-name6" placeholder="Campaign Name #6"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link6" name="portal-link6" placeholder="Portal Link #6"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids6" name="geno-ids6" placeholder="Geno IDs #6"/> <span class="focus-border"> <i></i> </span> </div></div></div><div class="file-div"> <div id="omni-div"> <label class="report omni" for="file" ><span id="omni-title">Omniture report</span ><i class="fas fa-file-upload fa-7x"></i ><span class="icon-shadow"></span ><span >Click to browse <span class="drag">or drop file here</span></span > <input name="file" id="file" class="file" type="file" accept=".xl*,.csv" onchange="createReport(this.files);"/> </label> </div><p class="file-name" id="file-name">No file selected!</p></div></div>
+        <div id="container" class="animate-bottom"> <h1>Gap Report Generator</h1> <h2> <span style="color: red">[ </span>George Antoniou - EMEA SDE team<span style="color: red">]</span> </h2> <div class="inputs"> <div class="input-set" id="input-set1"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name1" name="campaign-name1" placeholder="Campaign Name #1"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link1" name="portal-link1" placeholder="Portal Link #1"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids1" name="geno-ids1" placeholder="Geno IDs #1"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set2"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name2" name="campaign-name2" placeholder="Campaign Name #2"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link2" name="portal-link2" placeholder="Portal Link #2"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids2" name="geno-ids2" placeholder="Geno IDs #2"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set3"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name3" name="campaign-name3" placeholder="Campaign Name #3"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link3" name="portal-link3" placeholder="Portal Link #3"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids3" name="geno-ids3" placeholder="Geno IDs #3"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set4"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name4" name="campaign-name4" placeholder="Campaign Name #4"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link4" name="portal-link4" placeholder="Portal Link #4"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids4" name="geno-ids4" placeholder="Geno IDs #4"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set5"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name5" name="campaign-name5" placeholder="Campaign Name #5"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link5" name="portal-link5" placeholder="Portal Link #5"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids5" name="geno-ids5" placeholder="Geno IDs #5"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set6"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name6" name="campaign-name6" placeholder="Campaign Name #6"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link6" name="portal-link6" placeholder="Portal Link #6"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids6" name="geno-ids6" placeholder="Geno IDs #6"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set7"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name7" name="campaign-name7" placeholder="Campaign Name #7"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link7" name="portal-link7" placeholder="Portal Link #7"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids7" name="geno-ids7" placeholder="Geno IDs #7"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set8"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name8" name="campaign-name8" placeholder="Campaign Name #8"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link8" name="portal-link8" placeholder="Portal Link #8"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids8" name="geno-ids8" placeholder="Geno IDs #8"/> <span class="focus-border"> <i></i> </span> </div></div><div class="input-set" id="input-set9"> <div class="spec input-div"> <input class="input-text" type="text" id="campaign-name9" name="campaign-name9" placeholder="Campaign Name #9"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="portal-link9" name="portal-link9" placeholder="Portal Link #9"/> <span class="focus-border"> <i></i> </span> </div><div class="spec input-div"> <input class="input-text" type="text" id="geno-ids9" name="geno-ids9" placeholder="Geno IDs #9"/> <span class="focus-border"> <i></i> </span> </div></div></div><div class="file-div"> <div id="omni-div"> <label class="report omni" for="file" ><span id="omni-title">Omniture report</span ><i class="fas fa-file-upload fa-7x"></i ><span class="icon-shadow"></span ><span >Click to browse <span class="drag">or drop file here</span></span > <input name="file" id="file" class="file" type="file" accept=".xl*,.csv" onchange="createReport(this.files);"/> </label> </div><p class="file-name" id="file-name">No file selected!</p></div></div>
         <script>
             const file = document.getElementById('file');
 
@@ -144,8 +144,8 @@
                             updateNetDemand(data);
 
                             results.push(
-                                Array.from(Array(3).fill(0), () =>
-                                    new Array(5).fill(0)
+                                Array.from({ length: 3 }, () =>
+                                    Array(5).fill(0)
                                 )
                             );
 
@@ -167,30 +167,19 @@
                                                 'Email version (v11) (evar11)'
                                             ].includes(
                                                 inputObj[z]['Geno Ids'][i]
-                                            )
+                                            ) &&
+                                            (data[j][
+                                                'Email version (v11) (evar11)'
+                                            ].includes('PERSXC1X') ||
+                                                data[j][
+                                                    'Email version (v11) (evar11)'
+                                                ].includes('PERSXT1X') ||
+                                                data[j][
+                                                    'Email version (v11) (evar11)'
+                                                ].includes('PERSXT2X'))
                                         ) {
-                                            if (
-                                                data[j][
-                                                    'Email version (v11) (evar11)'
-                                                ].includes('PERSXC1X')
-                                            ) {
-                                                results[z][i][k] +=
-                                                    data[j][metrics[k]];
-                                            } else if (
-                                                data[j][
-                                                    'Email version (v11) (evar11)'
-                                                ].includes('PERSXT1X')
-                                            ) {
-                                                results[z][i][k] +=
-                                                    data[j][metrics[k]];
-                                            } else if (
-                                                data[j][
-                                                    'Email version (v11) (evar11)'
-                                                ].includes('PERSXT2X')
-                                            ) {
-                                                results[z][i][k] +=
-                                                    data[j][metrics[k]];
-                                            }
+                                            results[z][i][k] +=
+                                                data[j][metrics[k]];
                                         }
                                         results[z][i][k] = parseFloat(
                                             results[z][i][k].toFixed(2)
@@ -241,10 +230,11 @@
                     const fName = fileInput.files[0].name;
                     const fileSplit = fName.split('_');
                     const fileBrand = fileSplit[0],
-                        fileDate = fileSplit[fileSplit.length - 1];
+                        fileDate =
+                            fileSplit[fileSplit.length - 1].split('.')[0];
                     const fileName = fileBrand + '_' + fileDate;
                     setTimeout(() => {
-                        downloadXL(fileName);
+                        downloadXL(fileName + '.xlsx');
                     }, '1000');
 
                     reader.readAsBinaryString(file[x]);
@@ -321,29 +311,39 @@
 
                     XLSX.utils.book_append_sheet(wb, ws1, 'Results');
                     XLSX.utils.book_append_sheet(wb, ws2, 'Raw Data');
-                    const merge = [];
-                    for (let i = 1; i < 19; i += 3) {
-                        merge.push({
-                            s: { r: i, c: 0 },
-                            e: { r: i + 2, c: 0 },
-                        });
-                        merge.push({
-                            s: { r: i, c: 9 },
-                            e: { r: i + 2, c: 9 },
-                        });
-                        merge.push({
-                            s: { r: i, c: 11 },
-                            e: { r: i + 2, c: 11 },
-                        });
-                        merge.push({
-                            s: { r: i, c: 13 },
-                            e: { r: i + 2, c: 13 },
-                        });
-                        merge.push({
-                            s: { r: i, c: 14 },
-                            e: { r: i + 2, c: 14 },
-                        });
-                    }
+                    const merge = [
+                        ...Array(9)
+                            .fill({ c: 0 })
+                            .map((x, i) => ({
+                                s: { r: 1 + 3 * i, c: 0 },
+                                e: { r: 3 + 3 * i, c: 0 },
+                            })),
+                        ...Array(9)
+                            .fill({ c: 9 })
+                            .map((x, i) => ({
+                                s: { r: 1 + 3 * i, c: 9 },
+                                e: { r: 3 + 3 * i, c: 9 },
+                            })),
+                        ...Array(9)
+                            .fill({ c: 11 })
+                            .map((x, i) => ({
+                                s: { r: 1 + 3 * i, c: 11 },
+                                e: { r: 3 + 3 * i, c: 11 },
+                            })),
+                        ...Array(9)
+                            .fill({ c: 13 })
+                            .map((x, i) => ({
+                                s: { r: 1 + 3 * i, c: 13 },
+                                e: { r: 3 + 3 * i, c: 13 },
+                            })),
+                        ...Array(9)
+                            .fill({ c: 14 })
+                            .map((x, i) => ({
+                                s: { r: 1 + 3 * i, c: 14 },
+                                e: { r: 3 + 3 * i, c: 14 },
+                            })),
+                    ];
+
                     ws1['!merges'] = merge;
 
                     for (let i = 1; i < inputs.length; i += 3) {
@@ -356,7 +356,7 @@
                         ws1,
                         [['Results Pulled: ' + currentDate]],
                         {
-                            origin: 'A21',
+                            origin: 'A30',
                         }
                     );
 
