--- a/tapestryrepmerger.html
+++ b/tapestryrepmerger.html
@@ -134,6 +134,11 @@
                                 ];
                             if (
                                 secondCell &&
+                                secondCell.v === 'Email Content Name'
+                            ) {
+                                nameRow = rowNum;
+                            } else if (
+                                secondCell &&
                                 secondCell.v === fileData['Campaign']
                             ) {
                                 campaignRow = rowNum;
@@ -143,10 +148,11 @@
 
                         const xlRowObj = XLSX.utils.sheet_to_row_object_array(
                             workbook.Sheets[workbook.SheetNames[0]],
-                            { range: 7 }
+                            { range: nameRow }
                         );
-
-                        fileData = xlRowObj[campaignRow - 8];
+                        console.log(fileData);
+                        fileData = xlRowObj[campaignRow - nameRow - 1];
+                        console.log(fileData);
 
                         fileData['Send Date'] = new Date(
                             Date.UTC(0, 0, fileData['Send Date'] - 1)
